--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,6 +4,6 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Documentation"
+  name = "Documentación"
   url = "docs/"
   weight = 10
