--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -100,7 +100,7 @@ twitter = ""
 
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "jumadoag@gmail.com"
-phone = "832 771 16 92"
+phone = "2816575954"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
