--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -99,6 +99,7 @@ twitter = ""
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
+Ángel Flores
 email = "jumadoag@gmail.com"
 phone = "2816575954"
 
