--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -99,8 +99,8 @@ twitter = ""
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-Ángel Flores
-email = "jumadoag@gmail.com"
+
+email = "a.flores1993@yahoo.com"
 phone = "2816575954"
 
 # Address
